# faststudy

./: .env  .gitignore  AUTOMATED_TESTING_GUIDE.md  README.md  TESTING_GUIDE.md  arch.md  compile_project.py  config.py  faststudy.db  main.py  package-lock.json  pyproject.toml  pytest.ini  verify_compiled_code.py
.trae/rules/: project_rules.md
doc/: PROJECT_RELEASE_GUIDE.md
examples/: langchain_example.py  langgraph_example.py
models/: database.py  schemas.py
reports/: test_report.html
routers/: items.py  llm.py  users.py
static/: index.html  items.html  langchain.html  langgraph.html  users.html
tests/: test_items_page.py  test_langchain_page.py  test_langgraph_page.py  test_users_page.py
